Fix Firefox scrollbar

--- a/components/threading/global_threads/thread_list/thread_list.scss
+++ b/components/threading/global_threads/thread_list/thread_list.scss
@@ -34,6 +34,8 @@
 
     .threads {
         margin-right: 5px;
+        scrollbar-color: var(--center-channel-color-32) #fff0;
+        scrollbar-width: thin;
         grid-area: list;
 
         .no-results__wrapper {
